<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_record_voice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="recorder.devlanding.com.recorder.RecordVoice.RecordVoiceActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="130dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recording time"
            android:textSize="18sp"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timer"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="00:00:00"
            android:textColor="#ffffff"
            android:textSize="50sp" />

    </LinearLayout>
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/onRecord"
        android:paddingBottom="100dp"
        android:paddingTop="16dp"
        android:src="@drawable/ic_play_arrow_white_48dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/onStop"
        android:paddingBottom="100dp"
        android:paddingTop="16dp"
        android:visibility="invisible"
        android:src="@drawable/ic_stop_white_48dp"/>

</RelativeLayout>

